gcc/testsuite/c-c++-common/goacc/parallel-fail-1.c
void
foo (void)
{
#pragma acc parallel foo	/* { dg-error "expected clause before 'foo'" } */
  foo ();
}
